Fill in quiz question and options for 'Which Season Are You?'

--- a/index.html
+++ b/index.html
@@ -32,8 +32,65 @@
       </div>
     </div>
 
-    
-    
+<div class="container d-flex justify-content-center" id="question-2">
+      <div class="card my-4 p-4 question-block" style="width: 75%;">
+        <h4 class="mb-3">What’s your ideal weekend activity?</h4>
+        <div class="row g-2">
+          <div class="col-6">
+            <button class="btn btn-outline-primary w-100 answer-btn" data-answer="A">Visiting a botanical garden or farmers market</button>
+          </div>
+          <div class="col-6">
+            <button class="btn btn-outline-primary w-100 answer-btn" data-answer="B">Hitting the beach or going to a summer concert</button>
+          </div>
+          <div class="col-6">
+            <button class="btn btn-outline-primary w-100 answer-btn" data-answer="C">Baking, reading, or exploring small towns</button>
+          </div>
+          <div class="col-6">
+            <button class="btn btn-outline-primary w-100 answer-btn" data-answer="D">Watching movies, skiing, or drinking hot cocoa</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+<div class="container d-flex justify-content-center" id="question-3">
+      <div class="card my-4 p-4 question-block" style="width: 75%;">
+        <h4 class="mb-3">What kind of color palette do you gravitate toward?</h4>
+        <div class="row g-2">
+          <div class="col-6">
+            <button class="btn btn-outline-primary w-100 answer-btn" data-answer="A">Pastels and soft tones</button>
+          </div>
+          <div class="col-6">
+            <button class="btn btn-outline-primary w-100 answer-btn" data-answer="B">Bright, bold colors</button>
+          </div>
+          <div class="col-6">
+            <button class="btn btn-outline-primary w-100 answer-btn" data-answer="C">Warm, earthy hues</button>
+          </div>
+          <div class="col-6">
+            <button class="btn btn-outline-primary w-100 answer-btn" data-answer="D">Cool neutrals and deep blues</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+        <div class="container d-flex justify-content-center" id="question-4">
+      <div class="card my-4 p-4 question-block" style="width: 75%;">
+        <h4 class="mb-3">Choose a simple joy:</h4>
+        <div class="row g-2">
+          <div class="col-6">
+            <button class="btn btn-outline-primary w-100 answer-btn" data-answer="A">Smelling fresh flowers</button>
+          </div>
+          <div class="col-6">
+            <button class="btn btn-outline-primary w-100 answer-btn" data-answer="B">Feeling the sun on your skin</button>
+          </div>
+          <div class="col-6">
+            <button class="btn btn-outline-primary w-100 answer-btn" data-answer="C">Hearing leaves crunch underfoot</button>
+          </div>
+          <div class="col-6">
+            <button class="btn btn-outline-primary w-100 answer-btn" data-answer="D">Watching snow fall quietly</button>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- End quiz element -->
 
     <!-- Add more quiz elements here -->
