Implement detailed season quiz results with personality descriptions and characteristics

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <div class="container d-flex justify-content-center" id="question-2">
       <div class="card my-4 p-4 question-block" style="width: 75%;">
-        <h4 class="mb-3">What’s your ideal weekend activity?</h4>
+        <h4 class="mb-3">What is your ideal weekend activity?</h4>
         <div class="row g-2">
           <div class="col-6">
             <button class="btn btn-outline-primary w-100 answer-btn" data-answer="A">Visiting a botanical garden or farmers market</button>
@@ -93,9 +93,6 @@
     </div>
 
     <!-- End quiz element -->
-
-
-
 
     <!-- Add more quiz elements here -->
 
